colocando foto pessoal

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <!--profile picture and name-->
       <div id="profile">
-        <img src="./assets/avatar.png" alt="Foto de perfil" />
+        <img src="./assets/caraunique.png" alt="Foto de perfil" />
         <p>Victor Cardial</p>
       </div>
 
